# short-link

./: Cargo.toml  README.md  Rocket.toml
src/: db.rs  main.rs  web.rs
src/sql/: create_table.sql
