[package]
name = "quick-link"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
base-62 = "0.1.1"
chrono = { version = "0.4.19", features = ["serde"] }
const_format = "0.2.13"
fern = "0.6.0"
log = "0.4.13"
once_cell = "1.5.2"
rbatis = { version = "1.8.65", features = ["async-io"] }
rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket" }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.0.2", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
